# ACTUNEO

./: .gitignore  .readthedocs.yaml  CODE_OF_CONDUCT.md  COMMUNITY.md  CONTRIBUTING.md  DEVELOPMENT.md  DOCUMENTATION_COMPLETE.md  GOVERNANCE.md  LICENSE  MANIFEST.in  README.md  READTHEDOCS_SETUP.md  paper.bib  paper.md  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml
actuneo/: __init__.py
actuneo/finance/: __init__.py  duration_convexity.py  interest.py  yield_curve.py
actuneo/ifrs17/: __init__.py
actuneo/life/: __init__.py  annuities.py  life_assurance.py  reserves.py
actuneo/loss_reserving/: __init__.py
actuneo/macro_africa/: __init__.py
actuneo/mortality/: __init__.py  mortality_table.py  survival_functions.py
actuneo/mortality/data/zimbabwe_2023/: a_male_assured_lives_a_life_table.csv  c_group_life_assurance_male_and_female_a_male_life_table.csv  c_group_life_assurance_male_and_female_b_female_life_table.csv  d_funeral_principal_members_a_life_table.csv  e_funeral_spouses_a_life_table.csv  f_funeral_adult_dependents_a_life_table.csv  g_pre_retirement_pensions_males_females_a_male_life_table.csv  g_pre_retirement_pensions_males_females_b_female_life_table.csv  h_post_retirement_pensions_male_life_tables_a_life_table.csv  i_post_retirement_pensions_female_life_tables_i_life_table.csv
actuneo/pensions/: __init__.py
actuneo/simulation/: __init__.py
actuneo/utils/: __init__.py
docs/: changelog.rst  conf.py  contributing.rst  examples.rst  index.rst  installation.rst  quickstart.rst  requirements.txt
docs/api/: finance.rst  ifrs17.rst  life.rst  loss_reserving.rst  macro_africa.rst  mortality.rst  pensions.rst  simulation.rst  utils.rst
tests/: conftest.py  test_finance.py  test_life.py  test_mortality.py
