[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "actuneo"
version = "0.1.1"
description = "African Actuarial Python Library for insurance, pensions, and investment analytics"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Shannon Tafadzwa Sikadi", email = "shannonsikadi@gmail.com"},
]
keywords = [
    "actuarial",
    "insurance",
    "pensions",
    "finance",
    "mortality",
    "africa",
    "zimbabwe",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Office/Business :: Financial :: Accounting",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "matplotlib>=3.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.2.0",
    "pytest-cov>=2.12.0",
    "black>=21.0.0",
    "flake8>=3.9.0",
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
]
ml = [
    "scikit-learn>=1.0.0",
    "statsmodels>=0.12.0",
]
viz = [
    "plotly>=5.0.0",
    "seaborn>=0.11.0",
]

[project.urls]
Homepage = "https://github.com/ShannonT20/ACTUNEO"
Documentation = "https://github.com/ShannonT20/ACTUNEO"
Repository = "https://github.com/ShannonT20/ACTUNEO"
"Bug Tracker" = "https://github.com/ShannonT20/ACTUNEO/issues"

[tool.setuptools]
packages = {find = {}}

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.coverage.run]
source = ["actuneo"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
